<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textUri"
        android:hint="@string/username_label"
        android:nextFocusDown="@id/edit_password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textPassword"
        android:nextFocusDown="@id/addr"
        android:hint="@string/password_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textUri"
        android:nextFocusDown="@string/btn_dialog_save"
        android:hint="@string/set_address_label"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_dialog_save"
            android:background="@drawable/button"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/btn_dialog_cancel"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>