<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/logo_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/app_logo"
                android:layout_width="125dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/app_icon"/>

            <TextView
                android:id="@+id/app_title"
                android:layout_marginTop="15dp"
                android:layout_below="@id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/app_title"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/app_subtitle"
                android:layout_below="@id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/app_desc"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-75dp"
            android:layout_marginTop="75dp">
            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/app_copyright"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>