<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/logo_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/app_logo"
                android:layout_width="95dp"
                android:layout_height="115dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/app_icon"/>

            <TextView
                android:id="@+id/app_title"
                android:layout_below="@id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/app_title"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/app_subtitle"
                android:layout_below="@id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/app_desc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                tools:text="Button Hint"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnscan"
                android:layout_below="@id/hint"
                android:layout_width="wrap_content"
                android:paddingHorizontal="15dp"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:textColor="#fff"
                android:textStyle="bold"

                android:text="@string/btn_init_start"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>